test/spec/simd_f32x4_cmp.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/simd_f32x4_cmp.wast
(;; STDOUT ;;;
out/test/spec/simd_f32x4_cmp.wast:7779: assert_invalid passed:
  out/test/spec/simd_f32x4_cmp/simd_f32x4_cmp.1.wasm:0000025: error: type mismatch in f32x4.eq, expected [v128, v128] but got [i64, f64]
  0000025: error: OnCompareExpr callback failed
out/test/spec/simd_f32x4_cmp.wast:7780: assert_invalid passed:
  out/test/spec/simd_f32x4_cmp/simd_f32x4_cmp.2.wasm:0000025: error: type mismatch in f32x4.ge, expected [v128, v128] but got [i64, f64]
  0000025: error: OnCompareExpr callback failed
out/test/spec/simd_f32x4_cmp.wast:7781: assert_invalid passed:
  out/test/spec/simd_f32x4_cmp/simd_f32x4_cmp.3.wasm:0000025: error: type mismatch in f32x4.gt, expected [v128, v128] but got [i64, f64]
  0000025: error: OnCompareExpr callback failed
out/test/spec/simd_f32x4_cmp.wast:7782: assert_invalid passed:
  out/test/spec/simd_f32x4_cmp/simd_f32x4_cmp.4.wasm:0000025: error: type mismatch in f32x4.le, expected [v128, v128] but got [i64, f64]
  0000025: error: OnCompareExpr callback failed
out/test/spec/simd_f32x4_cmp.wast:7783: assert_invalid passed:
  out/test/spec/simd_f32x4_cmp/simd_f32x4_cmp.5.wasm:0000025: error: type mismatch in f32x4.lt, expected [v128, v128] but got [i64, f64]
  0000025: error: OnCompareExpr callback failed
out/test/spec/simd_f32x4_cmp.wast:7784: assert_invalid passed:
  out/test/spec/simd_f32x4_cmp/simd_f32x4_cmp.6.wasm:0000025: error: type mismatch in f32x4.ne, expected [v128, v128] but got [i64, f64]
  0000025: error: OnCompareExpr callback failed
out/test/spec/simd_f32x4_cmp.wast:7789: assert_malformed passed:
  out/test/spec/simd_f32x4_cmp/simd_f32x4_cmp.7.wat:1:65: error: unexpected token "f4x32.eq", expected an instr.
  ...v128) (param $y v128) (result v128) (f4x32.eq (local.get $x) (local.get $y)))
                                          ^^^^^^^^
out/test/spec/simd_f32x4_cmp.wast:7790: assert_malformed passed:
  out/test/spec/simd_f32x4_cmp/simd_f32x4_cmp.8.wat:1:65: error: unexpected token "f4x32.ge", expected an instr.
  ...v128) (param $y v128) (result v128) (f4x32.ge (local.get $x) (local.get $y)))
                                          ^^^^^^^^
out/test/spec/simd_f32x4_cmp.wast:7791: assert_malformed passed:
  out/test/spec/simd_f32x4_cmp/simd_f32x4_cmp.9.wat:1:65: error: unexpected token "f4x32.gt", expected an instr.
  ...v128) (param $y v128) (result v128) (f4x32.gt (local.get $x) (local.get $y)))
                                          ^^^^^^^^
out/test/spec/simd_f32x4_cmp.wast:7792: assert_malformed passed:
  out/test/spec/simd_f32x4_cmp/simd_f32x4_cmp.10.wat:1:65: error: unexpected token "f4x32.le", expected an instr.
  ...v128) (param $y v128) (result v128) (f4x32.le (local.get $x) (local.get $y)))
                                          ^^^^^^^^
out/test/spec/simd_f32x4_cmp.wast:7793: assert_malformed passed:
  out/test/spec/simd_f32x4_cmp/simd_f32x4_cmp.11.wat:1:65: error: unexpected token "f4x32.lt", expected an instr.
  ...v128) (param $y v128) (result v128) (f4x32.lt (local.get $x) (local.get $y)))
                                          ^^^^^^^^
out/test/spec/simd_f32x4_cmp.wast:7794: assert_malformed passed:
  out/test/spec/simd_f32x4_cmp/simd_f32x4_cmp.12.wat:1:65: error: unexpected token "f4x32.ne", expected an instr.
  ...v128) (param $y v128) (result v128) (f4x32.ne (local.get $x) (local.get $y)))
                                          ^^^^^^^^
out/test/spec/simd_f32x4_cmp.wast:8073: assert_invalid passed:
  out/test/spec/simd_f32x4_cmp/simd_f32x4_cmp.14.wasm:000002c: error: type mismatch in f32x4.eq, expected [v128, v128] but got [v128]
  000002c: error: OnCompareExpr callback failed
out/test/spec/simd_f32x4_cmp.wast:8081: assert_invalid passed:
  out/test/spec/simd_f32x4_cmp/simd_f32x4_cmp.15.wasm:000001a: error: type mismatch in f32x4.eq, expected [v128, v128] but got []
  000001a: error: OnCompareExpr callback failed
out/test/spec/simd_f32x4_cmp.wast:8089: assert_invalid passed:
  out/test/spec/simd_f32x4_cmp/simd_f32x4_cmp.16.wasm:000002c: error: type mismatch in f32x4.ne, expected [v128, v128] but got [v128]
  000002c: error: OnCompareExpr callback failed
out/test/spec/simd_f32x4_cmp.wast:8097: assert_invalid passed:
  out/test/spec/simd_f32x4_cmp/simd_f32x4_cmp.17.wasm:000001a: error: type mismatch in f32x4.ne, expected [v128, v128] but got []
  000001a: error: OnCompareExpr callback failed
out/test/spec/simd_f32x4_cmp.wast:8105: assert_invalid passed:
  out/test/spec/simd_f32x4_cmp/simd_f32x4_cmp.18.wasm:000002c: error: type mismatch in f32x4.lt, expected [v128, v128] but got [v128]
  000002c: error: OnCompareExpr callback failed
out/test/spec/simd_f32x4_cmp.wast:8113: assert_invalid passed:
  out/test/spec/simd_f32x4_cmp/simd_f32x4_cmp.19.wasm:000001a: error: type mismatch in f32x4.lt, expected [v128, v128] but got []
  000001a: error: OnCompareExpr callback failed
out/test/spec/simd_f32x4_cmp.wast:8121: assert_invalid passed:
  out/test/spec/simd_f32x4_cmp/simd_f32x4_cmp.20.wasm:000002c: error: type mismatch in f32x4.le, expected [v128, v128] but got [v128]
  000002c: error: OnCompareExpr callback failed
out/test/spec/simd_f32x4_cmp.wast:8129: assert_invalid passed:
  out/test/spec/simd_f32x4_cmp/simd_f32x4_cmp.21.wasm:000001a: error: type mismatch in f32x4.le, expected [v128, v128] but got []
  000001a: error: OnCompareExpr callback failed
out/test/spec/simd_f32x4_cmp.wast:8137: assert_invalid passed:
  out/test/spec/simd_f32x4_cmp/simd_f32x4_cmp.22.wasm:000002c: error: type mismatch in f32x4.gt, expected [v128, v128] but got [v128]
  000002c: error: OnCompareExpr callback failed
out/test/spec/simd_f32x4_cmp.wast:8145: assert_invalid passed:
  out/test/spec/simd_f32x4_cmp/simd_f32x4_cmp.23.wasm:000001a: error: type mismatch in f32x4.gt, expected [v128, v128] but got []
  000001a: error: OnCompareExpr callback failed
out/test/spec/simd_f32x4_cmp.wast:8153: assert_invalid passed:
  out/test/spec/simd_f32x4_cmp/simd_f32x4_cmp.24.wasm:000002c: error: type mismatch in f32x4.ge, expected [v128, v128] but got [v128]
  000002c: error: OnCompareExpr callback failed
out/test/spec/simd_f32x4_cmp.wast:8161: assert_invalid passed:
  out/test/spec/simd_f32x4_cmp/simd_f32x4_cmp.25.wasm:000001a: error: type mismatch in f32x4.ge, expected [v128, v128] but got []
  000001a: error: OnCompareExpr callback failed
2607/2607 tests passed.
;;; STDOUT ;;)
